--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,8 @@
 [package]
 name = "hashconsing"
-version = "0.1.0"
-authors = ["Adrien Champion <adrien.champion@mail.com>"]
+version = "0.2.0"
+authors = ["Adrien Champion <adrien.champion@email.com>"]
+
+[[bin]]
+name = "hashconsing_bin"
+doc = false
