--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "hashconsing"
 version = "0.2.1"
 authors = ["Adrien Champion <adrien.champion@email.com>"]
+description = "A hash consing library."
+documentation = "http://adrienchampion.bitbucket.org/hashconsing/hashconsing/"
+homepage = "https://bitbucket.org/AdrienChampion/hashconsing/"
+repository = "https://bitbucket.org/AdrienChampion/hashconsing/src"
+readme = "README.md"
+keywords = ["hash consing", "perfect sharing", "maximal sharing"]
+license = "MIT/Apache-2.0"
 
 [[bin]]
 name = "hashconsing_bin"
