--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ documentation = "http://adrienchampion.bitbucket.org/hashconsing/hashconsing/"
 homepage = "https://bitbucket.org/AdrienChampion/hashconsing/"
 repository = "https://bitbucket.org/AdrienChampion/hashconsing/src"
 readme = "README.md"
-keywords = ["hash consing", "perfect sharing", "maximal sharing"]
+keywords = ["hash", "consing", "sharing"]
 license = "MIT/Apache-2.0"
 
 [[bin]]
