--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: rust
 
+os:
+  - linux
+  - osx
+
 rust:
   - stable
   - beta
 
 sudo: false
+
+env:
+  global:
+  - RUSTFLAGS="-C link-dead-code"
 
 cache: cargo
 
@@ -15,4 +23,23 @@ before_script:
 
 script:
   - travis-cargo build
+  - travis-cargo build -- --release
   - travis-cargo test
+
+after_success:
+- |
+  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
+  tar xzf master.tar.gz &&
+  cd kcov-master &&
+  mkdir build &&
+  cd build &&
+  cmake .. &&
+  make &&
+  make install DESTDIR=../../kcov-build &&
+  cd ../.. &&
+  rm -rf kcov-master &&
+  cargo clean &&
+  cargo test --no-run &&
+  for file in target/debug/rsmt2-*[^\(\.d\)]; do mkdir -p "target/cov/$(basename $file)"; ./kcov-build/usr/local/bin/kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file"; done &&
+  bash <(curl -s https://codecov.io/bash) &&
+  echo "Uploaded code coverage"
