some CI tweaking

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,15 +16,10 @@ env:
 
 cache: cargo
 
-before_script:
-  - |
-    pip install 'travis-cargo<0.2' --user &&
-    export PATH=$HOME/.local/bin:$PATH
-
 script:
-  - travis-cargo build
-  - travis-cargo build -- --release
-  - travis-cargo test
+  - cargo build --verbose
+  - cargo build --verbose --release
+  - cargo test --verbose
 
 after_success:
 - |
