--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,13 +12,10 @@ install:
   - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin;C:\Users\appveyor\
   - rustc -vV
   - cargo -vV
-  - curl -LsSf -o z3.zip https://github.com/Z3Prover/z3/releases/download/z3-4.5.0/z3-4.5.0-x64-win.zip
-  - unzip z3.zip
-  - mv z3-4.5.0-x64-win/bin/z3.exe C:\Users\appveyor\z3.exe
 
 build: false
 
 test_script:
   - cargo build --verbose
-  - cargo build --release
+  - cargo build --verbose --release
   - cargo test --verbose
