--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ keywords = ["hashconsing", "hash", "consing", "sharing", "caching"]
 license = "MIT/Apache-2.0"
 
 [badges]
-travis-ci = { repository = "AdrienChampion/hashconsing" }
+travis-ci = { repository = "AdrienChampion/hashconsing", service = "github" }
+appveyor = { repository = "AdrienChampion/hashconsing" }
+codecov = { repository = "AdrienChampion/hashconsing", service = "github" }
