--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,17 @@ env:
 
 cache: cargo
 
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - cmake
+      - gcc
+      - binutils-dev
+      - libiberty-dev
+
 script:
   - cargo build --verbose
   - cargo build --verbose --release
