--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hashconsing"
-version = "1.3.0"
+version = "1.5.0"
 authors = ["Adrien Champion <adrien.champion@email.com>"]
 description = "A hash consing library."
 documentation = "https://docs.rs/hashconsing"
@@ -12,13 +12,18 @@ keywords = ["hashconsing", "hash", "consing", "sharing", "caching"]
 license = "MIT/Apache-2.0"
 edition = "2018"
 
-[badges]
-travis-ci = { repository = "AdrienChampion/hashconsing", service = "github" }
-appveyor = { repository = "AdrienChampion/hashconsing" }
-codecov = { repository = "AdrienChampion/hashconsing", service = "github" }
+[package.metadata.docs.rs]
+rustdoc-args = [ "--all-features" ]
+
+[features]
+with_ahash = ["ahash"]
 
 [dependencies]
 lazy_static = "1.*"
+
+[dependencies.ahash]
+version = "^0.7.2"
+optional = true
 
 [dev-dependencies]
 crossbeam-utils = "^0.8"
