--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hashconsing"
-version = "1.5.0"
+version = "1.5.1"
 authors = ["Adrien Champion <adrien.champion@email.com>"]
 description = "A hash consing library."
 documentation = "https://docs.rs/hashconsing"
@@ -13,10 +13,11 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [package.metadata.docs.rs]
-rustdoc-args = [ "--all-features" ]
+features = ["unstable_docrs"]
 
 [features]
 with_ahash = ["ahash"]
+unstable_docrs = ["with_ahash"]
 
 [dependencies]
 lazy_static = "1.*"
