Add clippy to workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,7 @@ jobs:
       run: cargo test --verbose
     - name: Build doc
       run: cargo doc --verbose
+    - name: Run clippy
+      run: cargo clippy --verbose
     - name: Build release
       run: cargo build --release --verbose
