--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,7 @@ jobs:
       run: cargo doc --verbose
     - name: Run clippy
       run: cargo clippy --verbose
+    - name: Run rustfmt
+      run: cargo fmt --verbose --check
     - name: Build release
       run: cargo build --release --verbose
