Resolve: warning: some crates are on edition 2021 which defaults to `resolver = "2"`, but virtual workspaces default to `resolver = "1"`

--- a/hashconsing/Cargo.toml
+++ b/hashconsing/Cargo.toml
@@ -28,7 +28,7 @@ derive = ["hashconsing-derive"]
 
 [dependencies]
 lazy_static = "1.*"
-hashconsing-derive = { version = "0.1.0", optional = true, path = "hashconsing-derive" }
+hashconsing-derive = { version = "0.1.0", optional = true, path = "../hashconsing_derive" }
 
 [dependencies.ahash]
 version = "^0.8.3"
