--- a/hashconsing_derive/Cargo.toml
+++ b/hashconsing_derive/Cargo.toml
@@ -14,3 +14,7 @@ proc-macro-error = "1.0"
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "2.0", features = ["full"] }
+
+# For doc tests
+[dev-dependencies]
+hashconsing = {path = "../hashconsing", features = ["derive"]}
